# card-game

./: Cargo.toml  README.md
docs/: rules.md
docs/superpowers/plans/: 2026-06-21-battle-rules-adaptation.md  2026-06-21-rules-layer.md  2026-06-22-ai-computer-player-mcts.md
docs/superpowers/specs/: 2026-06-21-battle-rules-adaptation-design.md  2026-06-21-rules-layer-design.md  2026-06-22-ai-computer-player-mcts-design.md  2026-06-23-token-double-click-ai-budget-design.md
src/: battle.rs  game.rs  main.rs
src/ai/: decision.rs  determinization.rs  evaluation.rs  mcts.rs  mod.rs  observation.rs  rollout.rs
src/battle/: ai_runtime.rs  mod.rs
src/rules/: actions.rs  card.rs  color.rs  error.rs  events.rs  market.rs  mod.rs  noble.rs  player.rs  scoring.rs  state.rs  token.rs  validation.rs
